test/files/neg/t7292-removal.check
t7292-removal.scala:2: error: Octal escape literals are unsupported, use \u0000 instead.
  val chr1 = '\0'
              ^
t7292-removal.scala:3: error: Octal escape literals are unsupported, use \u0053 instead.
  val str1 = "abc\123456"
                 ^
t7292-removal.scala:4: error: Octal escape literals are unsupported, use \n instead.
  val lf = '\012'
            ^
three errors found
